vpc.tf
resource "aws_vpc" "vpc_stage" {
  cidr_block       = "10.1.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames="true"

  tags = {
    Name = "vpc_stage"
  }
}
